# nequeo

./: .gitignore  .travis.yml  README.md  index.html  params.json
Source/Components/Component/: BuildOrder.txt  BuildOrder_Cpp.txt  README.md
Source/Components/Handler/: Nequeo.Handler.sln  README.md
Source/Components/Primitive/: Local.testsettings  Nequeo.Primitive.sln  Nequeo.Primitive.vsmdi  README.md  TraceAndTestImpact.testsettings
Source/Components/Reflection/: Nequeo.Reflection.sln  README.md  Sandbox.html
Source/Components/Resource/: Nequeo.Resource.sln  README.md
Source/Components/Threading/: Local.testsettings  Nequeo.Threading-2.0.sln  Nequeo.Threading.sln  Nequeo.Threading.vsmdi  README.md  TraceAndTestImpact.testsettings
Source/References/Release/: DotNetOpenAuth.xml  Lucene.Net.Facet.XML  Lucene.Net.Queries.XML  Lucene.Net.XML  ManagedOpenSsl.XML  MathNet.Numerics.XML  MediaFoundation.XML  MongoDB.Bson.xml  MongoDB.Driver.XML  NAudio.XML  Newtonsoft.Json.xml  Npgsql.XML  Renci.SshNet.xml  SevenZipSharp.xml  System.ComponentModel.Composition.Codeplex.XML  System.Reflection.Context.xml  Telerik.Web.Mvc.XML  WebControlCaptcha.xml  iTextSharp.xml  log4net.xml
Source/References/Staging_x64/: Nequeo.PjSip.xml
Source/References/Staging_x86/: Nequeo.PjSip.xml
Tools/Crypto_cpp/cryptlib/: cryptlib.sln
Tools/Google/ProtocolBuffers/: ProtocolBuffersGoogleDevelopers.mht
Tools/Lucene/msvc/: lucene++.sln
Tools/Math/MathGL/mathgl-2.2.2.1/: CMakeLists.txt  ChangeLog.txt  INSTALL  brush.ods  cmake-qt4.txt  cmake-qt5.txt  todo.txt
Tools/Math/MathGL/mathgl-2.2.2.1/examples/: CMakeLists.txt  fltk_example.cpp  full_test.cpp  glut_example.cpp  mpi_test.cpp  qt_example.cpp  samples.cpp  wnd_samples.cpp  wx_example.cpp
Tools/Math/MathGL/mathgl-2.2.2.1/include/: config.h.in
Tools/Math/MathGL/mathgl-2.2.2.1/include/mgl2/: abstract.h  addon.h  base.h  base_cf.h  canvas.h  canvas_cf.h  canvas_wnd.h  data.h  data_cf.h  datac.h  datac_cf.h  define.h  eval.h  evalc.h  fit.h  fltk.h  font.h  glut.h  mgl.h  mgl_pas.pas  mpi.h  opengl.h  other.h  parser.h  pde.h  prim.h  qmathgl.h  qt.h  type.h  window.h  wnd.h  wx.h
Tools/Math/MathGL/mathgl-2.2.2.1/include/xpm/: accessories-calculator.xpm  alpha.xpm  alpha_on.xpm  axis_sh.xpm  box.xpm  document-export.xpm  document-import.xpm  document-open.xpm  document-print.xpm  document-properties.xpm  document-save.xpm  edit-delete.xpm  edit-find.xpm  edit-redo.xpm  edit-select-all.xpm  edit-undo.xpm  film-b.xpm  film-r.xpm  format-indent-more.xpm  go-down.xpm  go-first.xpm  go-last.xpm  go-next.xpm  go-previous.xpm  go-up.xpm  help-contents.xpm  help-faq.xpm  light_on.xpm  media-seek-backward.xpm  media-seek-forward.xpm  object-rotate-right-on.xpm  object-rotate-right.xpm  plot.xpm  preferences-system.xpm  process-stop.xpm  rotate_on.xpm  show_on.xpm  view-refresh.xpm  weather-clear.xpm  x-office-spreadsheet.xpm  (+7 more)
Tools/Math/MathGL/mathgl-2.2.2.1/json/: Backend.cpp  Backend.hpp  CMakeLists.txt  main.js  mathgl.Backend.js  mathgl.Graph.js  mathgl.View.js  mathgl.WebkitBackend.js
Tools/Math/MathGL/mathgl-2.2.2.1/lang/: CMakeLists.txt  data.i  mathgl.i  mgl.i  type.i
Tools/Math/MathGL/mathgl-2.2.2.1/mgllab/: CMakeLists.txt  animate.cpp  data.cpp  editor.cpp  grid.cpp  help.cpp  main.cpp  mathgl.cpp  option.cpp  setup.cpp  table.cpp  udav.h  udav.rc  write.cpp
Tools/Math/MathGL/mathgl-2.2.2.1/src/: CMakeLists.txt  addon.cpp  axis.cpp  base.cpp  base_cf.cpp  canvas.cpp  canvas_cf.cpp  complex.cpp  complex_io.cpp  cont.cpp  crust.cpp  data.cpp  data_ex.cpp  data_gr.cpp  data_io.cpp  data_png.cpp  def_font.cpp  eval.cpp  evalc.cpp  evalp.cpp  exec.cpp  export.cpp  export_2d.cpp  export_3d.cpp  fft.cpp  fit.cpp  font.cpp  interp.hpp  obj.cpp  opengl.cpp  other.cpp  parser.cpp  pde.cpp  pixel.cpp  plot.cpp  prc.cpp  prim.cpp  surf.cpp  tex_table.cpp  vect.cpp  (+2 more)
Tools/Math/MathGL/mathgl-2.2.2.1/src/prc/: PRC.h
Tools/Math/MathGL/mathgl-2.2.2.1/src/s_hull/: s_hull_pro.cpp  s_hull_pro.h
Tools/Math/MathGL/mathgl-2.2.2.1/texinfo/: CMakeLists.txt  appendix_en.texi  appendix_ru.texi  classes.dia  concept_en.texi  concept_ru.texi  core_en.texi  core_ru.texi  data_en.texi  data_ru.texi  doc_en.texi  doc_ru.texi  ex_mgl_en.texi  example_en.texi  example_ru.texi  formats_ru.texi  mathgl.js  mathgl_en.texi  mathgl_ru.texi  mgl_en.texi  mgl_ru.texi  other_en.texi  other_ru.texi  overview_en.texi  overview_ru.texi  parse_en.texi  parse_ru.texi  symbols_en.texi  time.texi  time_big.texi  udav_ru.texi  version.texi  version_hist.txt  web_en.texi  web_ru.texi  widget_en.texi  widget_ru.texi
Tools/Math/MathGL/mathgl-2.2.2.1/udav/: CMakeLists.txt  anim_dlg.cpp  anim_dlg.h  args_dlg.cpp  calc_dlg.cpp  dat_pnl.cpp  dat_pnl.h  data_dlg.cpp  data_dlg.h  files_dlg.cpp  files_dlg.h  find_dlg.cpp  find_dlg.h  help_pnl.cpp  help_pnl.h  hint_dlg.cpp  hint_dlg.h  info_dlg.cpp  info_dlg.h  mem_pnl.cpp  mem_pnl.h  newcmd_dlg.cpp  newcmd_dlg.h  open_dlg.cpp  opt_dlg.cpp  opt_dlg.h  plot_pnl.cpp  plot_pnl.h  prop_dlg.cpp  prop_dlg.h  qmglsyntax.cpp  setup_dlg.cpp  setup_dlg.h  style_dlg.cpp  style_dlg.h  text_pnl.cpp  text_pnl.h  textedit.cpp  textedit.h  udav.desktop  (+3 more)
Tools/Math/MathGL/mathgl-2.2.2.1/utils/: CMakeLists.txt  make_forth.cpp  make_pas.cpp  mglcgi.cpp  mglconv.cpp  mglview.cpp
Tools/Math/MathGL/mathgl-2.2.2.1/widgets/: CMakeLists.txt  fltk.cpp  glut.cpp  qt.cpp  wx.cpp
Tools/Math/MathGL/mathgl-2.2.2.1/widgets/qt4/: CMakeLists.txt
Tools/Math/MathGL/mathgl-2.2.2.1/widgets/qt5/: CMakeLists.txt
Tools/OpenGL/Common/: Common.cpp  OpenGL.cpp  OpenGL.hpp  OpenGLTools.cpp  OpenGLTools.hpp  common.hpp  openglmath.hpp
Tools/OpenH264/AndroidDecorder/: Android.sln
Tools/OpenH264/OpenH264Decoder/: OpenH264Decoder.sln
Tools/OpenH264/OpenH264Encoder/: OpenH264Encoder.sln
Tools/OpenH264/UWPOpenH264DecoderRT/: UWPOpenH264DecoderRT.sln
Tools/OpenH264/UWPOpenH264EncoderRT/: UWPOpenH264EncoderRT.sln
Tools/PHP/WinCache/: WinCache.sln
Tools/Rtf2Latex/: rtf2latex.sln
Tools/Rtf2Latex/pref/: cp932raw.txt  cp936raw.txt  latex-encoding  r2l-head  r2l-map  (+17 more)
(+13789 files in other folders)
